fix LevelProgressBar spacing

--- a/src/components/progress/Progress.module.css
+++ b/src/components/progress/Progress.module.css
@@ -17,8 +17,10 @@
 }
 
 .bar {
+	border-radius: 8px;
 	max-height: 6px;
 	min-height: 6px;
+	overflow: hidden;
 	position: relative;
 }
 
