--- a/src/views/match/Match.module.css
+++ b/src/views/match/Match.module.css
@@ -19,7 +19,7 @@
 	border-radius: 4px;
 	min-height: 82px;
 	min-width: 38%;
-	padding: 0 6px;
+	padding: 0 14px;
 }
 
 @media (max-width: 1500px) {
